# PhilanthroPy

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  publish.yml  test.yml
.hypothesis/constants/: 019eeb48913ce3da  0efa3d9a221e8979  149f20ace0aae552  35d0ebca70457045  3f5d2841dc538f7b  4d5e1527b7c35f95  55cf70ae24bad30c  57f3fd0476e5c574  69438398b3b3c534  6dece0204840c86c  7a581dc34a99f7c8  932d0e4c79ad55f0  b565ab27939db20b  c3c800fa538f2b58  c7765d5d403f44eb  d7f772c69fdf2497  ef666cde6480a7d6
docs/: api.rst  conf.py  index.md  index.rst  sg_execution_times.rst  user_guide.rst
docs/examples/: README.txt  plot_basic_usage.py
docs/explanation/: benchmarks.md  capacity_and_loyalty.md  comparison_to_vendors.md  compliance_considerations.md  design_principles.md  fundraising_metrics.md  index.md
docs/how-to/: build_grateful_patient_features.md  develop_and_test.md  handle_missing_wealth_data.md  index.md  save_and_load_models.md
docs/reference/: datasets.md  index.md  inspection.md  metrics.md  model_selection.md  models.md  preprocessing.md
docs/stylesheets/: extra.css
docs/tutorials/: avoiding_temporal_data_leakage.md  building_a_grateful_patient_pipeline.md  building_your_first_model.md  index.md
docs/user_guide/: development.rst  metrics.rst  models.rst  preprocessing.rst
examples/: README.md  method_reference_lalakiya2025.py  quickstart.ipynb  quickstart.py  unischema_to_scores.py
paper/: paper.bib  paper.md
philanthropy/: __init__.py  base.py  cli.py
philanthropy/datasets/: __init__.py  _ciob.py  _generator.py
philanthropy/experimental/: __init__.py  _lapse.py
philanthropy/ingest/: __init__.py  _constituent_events.py
philanthropy/inspection/: __init__.py  _importance.py
philanthropy/metrics/: __init__.py  _fairness.py  _financial.py  scoring.py
philanthropy/model_selection/: __init__.py
philanthropy/models/: __init__.py  _forecast.py  _lapse.py  _moves.py  _planned_giving.py  _propensity.py  _wallet.py  propensity.py
philanthropy/preprocessing/: __init__.py  _discharge_window.py  _encounter_recency.py  _encounters.py  _grateful_patient.py  _planned_giving.py  _rfm.py  _share_of_wallet.py  _solicitation_window.py  _wealth.py  _wealth_percentile.py  transformers.py
philanthropy/utils/: __init__.py  _validation.py  testing.py
philanthropy/visualisation/: _plots.py  (+1 more)
scripts/: benchmark_models.py  install_hooks.sh
tests/: conftest.py  test_ciob.py  test_cli.py  test_compliance_features.py  test_coverage_boost.py  test_datasets.py  test_doc_examples.py  test_donor_propensity_model.py  test_estimators.py  test_examples.py  test_experimental_lapse.py  test_fairness.py  test_financial.py  test_forecast_model.py  test_grateful_patient_featurizer.py  test_ingest.py  test_inspection.py  test_leakage.py  test_major_gift_classifier.py  test_metrics.py  test_planned_giving.py  test_preprocessing.py  test_preprocessing_properties.py  test_propensity.py  test_properties.py  test_rfm.py  test_rfm_transformer.py  test_share_of_wallet.py  test_sklearn_compat.py  test_sklearn_compliance.py  test_solicitation_window.py  test_transformers_property.py  test_utils.py  test_visualisation.py
(+2 files in other folders)
