[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "philanthropy"
version = "0.2.0"
description = "A scikit-learn compatible toolkit for predictive donor analytics in the nonprofit sector."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "flake8"
]
docs = [
    "sphinx>=6.0",
    "pydata-sphinx-theme",
    "numpydoc",
    "sphinx-gallery",
    "sphinx-design",
    "matplotlib",
    "pandas",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["philanthropy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hypothesis]
suppress_health_check = ["too_slow"]
max_examples = 200
