[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "philanthropy"
version = "0.4.0"
description = "scikit-learn-native predictive analytics for nonprofit and academic-medical-center fundraising: donor propensity, lapse, planned giving, wealth screening, and revenue forecasting."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Shivam Lalakiya", email = "shivamlalakiya151299@gmail.com" }
]
keywords = [
    "nonprofit",
    "fundraising",
    "scikit-learn",
    "donor-analytics",
    "healthcare-philanthropy",
    "machine-learning",
    "predictive-analytics",
    "data-science",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "scikit-learn>=1.6",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "seaborn"
]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "flake8",
    "matplotlib",
    "seaborn"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]",
    "matplotlib",
    "pandas",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/PhilanthroPy-Project/PhilanthroPy"
Documentation = "https://PhilanthroPy-Project.github.io/PhilanthroPy/"
Repository = "https://github.com/PhilanthroPy-Project/PhilanthroPy"
Changelog = "https://github.com/PhilanthroPy-Project/PhilanthroPy/blob/main/CHANGELOG.md"
Issues = "https://github.com/PhilanthroPy-Project/PhilanthroPy/issues"
UniSchema = "https://github.com/PhilanthroPy-Project/UniSchema"

[tool.setuptools.packages.find]
where = ["."]
include = ["philanthropy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.hypothesis]
suppress_health_check = ["too_slow"]
max_examples = 200
